Final commit before attempting to do a git-pages branch.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>Prologue by HTML5 UP</title>
+    <title>Web Developer::Warren Rawlings</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -88,13 +88,13 @@
                 <div class="row">
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+                            <a href="#" class="image fit"><img src="images/religion-tablet.png" alt="" /></a>
                             <header>
                                 <h3>Ipsum Feugiat</h3>
                             </header>
                         </article>
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+                            <a href="#" class="image fit"><img src="images/religion-phone.png" alt="" /></a>
                             <header>
                                 <h3>Rhoncus Semper</h3>
                             </header>
@@ -102,13 +102,13 @@
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+                            <a href="#" class="image fit"><img src="images/store1.png" alt="" /></a>
                             <header>
                                 <h3>Magna Nullam</h3>
                             </header>
                         </article>
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+                            <a href="#" class="image fit"><img src="images/emory3.gif" alt="" /></a>
                             <header>
                                 <h3>Natoque Vitae</h3>
                             </header>
@@ -116,13 +116,13 @@
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+                            <a href="#" class="image fit"><img src="images/emory1.gif" alt="" /></a>
                             <header>
                                 <h3>Dolor Penatibus</h3>
                             </header>
                         </article>
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+                            <a href="#" class="image fit"><img src="images/email-landing2.jpg" alt="" /></a>
                             <header>
                                 <h3>Orci Convallis</h3>
                             </header>
