--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
         <!-- Copyright -->
         <ul class="copyright">
-            <li>&copy; Untitled. All rights reserved.</li>
+            <li>&copy; Warren Rawlings. All rights reserved.</li>
             <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
         </ul>
 
