--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div id="logo">
                 <span class="image avatar48"><img src="images/small.jpg" alt="" /></span>
                 <h1 id="title">Warren Rawlings</h1>
-                <p>Full Stack Web Developer </br>Graphic Designer and Veteran</p>
+                <p>Full Stack Web Developer </br>Graphic Designer, Veteran</p>
             </div>
 
             <!-- Nav -->
