changes to portfolio section.

--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
 
                 <div class="row">
                     <div class="col-4 col-12-mobile">
-                        <article class="item">
+                        <!--<article class="item">
                             <a href="#" class="image fit"><img src="images/religion-tablet.png" alt="" /></a>
                             <header>
-                                <h3>Ipsum Feugiat</h3>
-                            </header>
+                                <h3>Tablet: Missionary App</h3>
+                            </header>-->
                         </article>
                         <article class="item">
                             <a href="#" class="image fit"><img src="images/religion-phone.png" alt="" /></a>
                             <header>
-                                <h3>Rhoncus Semper</h3>
+                                <h3>Phone: Missionary App</h3>
                             </header>
                         </article>
                     </div>
@@ -104,27 +104,27 @@
                         <article class="item">
                             <a href="#" class="image fit"><img src="images/store1.png" alt="" /></a>
                             <header>
-                                <h3>Magna Nullam</h3>
+                                <h3>Responsive Shopify Custom Site:</br>DeskUpgrade.com</h3>
                             </header>
                         </article>
                         <article class="item">
                             <a href="#" class="image fit"><img src="images/emory3.gif" alt="" /></a>
                             <header>
-                                <h3>Natoque Vitae</h3>
+                                <h3>Site: Emory Health System</h3>
                             </header>
                         </article>
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/emory1.gif" alt="" /></a>
+                            <a href="#" class="image fit"><img src="images/email-landing1.jpg" alt="" /></a>
                             <header>
-                                <h3>Dolor Penatibus</h3>
+                                <h3>Email and Landing Pages</h3>
                             </header>
                         </article>
                         <article class="item">
                             <a href="#" class="image fit"><img src="images/email-landing2.jpg" alt="" /></a>
                             <header>
-                                <h3>Orci Convallis</h3>
+                                <h3>Email and Landing Pages:</br> Roomba Contest</h3>
                             </header>
                         </article>
                     </div>
