changed the portfolio articles to match the other branch

--- a/index.html
+++ b/index.html
@@ -87,44 +87,44 @@
 
                 <div class="row">
                     <div class="col-4 col-12-mobile">
-                        <article class="item">
-                            <a href="#" class="image fit"><img src="images/religion-tablet.png" alt="" /></a>
+                        <!--<article class="item">
+                            <a href="https://www.behance.net/gallery/47634411/IMB-Survey-and-Mobile-Site-Design" class="image fit" target="_blank"><img src="images/religion-tablet.png" alt="" /></a>
                             <header>
-                                <h3>Ipsum Feugiat</h3>
-                            </header>
+                                <h3>Tablet: Missionary App</h3>
+                            </header>-->
                         </article>
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/religion-phone.png" alt="" /></a>
+                            <a href="https://www.behance.net/gallery/47634411/IMB-Survey-and-Mobile-Site-Design" class="image fit" target="_blank"><img src="images/religion-phone.png" alt="Missionary Phone App" /></a>
                             <header>
-                                <h3>Rhoncus Semper</h3>
-                            </header>
-                        </article>
-                    </div>
-                    <div class="col-4 col-12-mobile">
-                        <article class="item">
-                            <a href="#" class="image fit"><img src="images/store1.png" alt="" /></a>
-                            <header>
-                                <h3>Magna Nullam</h3>
-                            </header>
-                        </article>
-                        <article class="item">
-                            <a href="#" class="image fit"><img src="images/emory3.gif" alt="" /></a>
-                            <header>
-                                <h3>Natoque Vitae</h3>
+                                <h3>Phone: Missionary App</h3>
                             </header>
                         </article>
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/emory1.gif" alt="" /></a>
+                            <a href="https://www.behance.net/gallery/47654449/Storefronts-created-by-Shopify-and-Digital-Store-Front" class="image fit" target="_blank"><img src="images/store1.png" alt="Custom Shopify Store in Liquid and Sass" /></a>
                             <header>
-                                <h3>Dolor Penatibus</h3>
+                                <h3>Responsive Shopify Custom Site:</br>DeskUpgrade.com</h3>
                             </header>
                         </article>
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/email-landing2.jpg" alt="" /></a>
+                            <a href="https://www.behance.net/gallery/1243139/EmoryHealthCareOrg" class="image fit" target="_blank"><img src="images/emory3.gif" alt="Emory Health System website image" /></a>
                             <header>
-                                <h3>Orci Convallis</h3>
+                                <h3>Site: Emory Health System</h3>
+                            </header>
+                        </article>
+                    </div>
+                    <div class="col-4 col-12-mobile">
+                        <article class="item">
+                            <a href="https://www.behance.net/gallery/53140233/Email-and-Landing-Page" class="image fit" target="_blank"><img src="images/email-landing1.jpg" alt="Designs for Email leading to corresponding Landing Page." /></a>
+                            <header>
+                                <h3>Email and Landing Pages</h3>
+                            </header>
+                        </article>
+                        <article class="item">
+                            <a href="https://www.behance.net/gallery/53140205/Email-and-Landing-Page-for-Contest" class="image fit" target="_blank"><img src="images/email-landing2.jpg" alt="Designs for Email leading to corresponding Landing Page." /></a>
+                            <header>
+                                <h3>Email and Landing Pages:</br> Roomba Contest</h3>
                             </header>
                         </article>
                     </div>
