added small changes to ALT tags for images.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <!-- Logo -->
             <div id="logo">
-                <span class="image avatar48"><img src="images/small.jpg" alt="" /></span>
+                <span class="image avatar48"><img src="images/small.jpg" alt="Photo of Warren Rawlings in front of a chart" /></span>
                 <h1 id="title">Warren Rawlings</h1>
                 <p>Full Stack Web Developer </br>Graphic Designer and Veteran</p>
             </div>
